Fixed fonts not showing up error and formatting issue

--- a/frontend/src/app/HelpOutToday.module.css
+++ b/frontend/src/app/HelpOutToday.module.css
@@ -25,10 +25,15 @@
   text-align: center;
   flex-direction: column;
 }
-
+@font-face {
+  font-family: "Heebo";
+  src: url("fonts/heebo.regular.ttf");
+  font-weight: 400;
+  font-style: normal;
+}
 .helpOutText h2 {
   color: #fff;
-  font-family: Heebo;
+  font-family: "Heebo";
   font-size: 48px;
   font-style: normal;
   font-weight: 700;
@@ -39,7 +44,10 @@
   align-items: center;
   gap: 10px;
 }
-
+@font-face {
+  font-family: "Open Sans";
+  src: url("fonts/OpenSans-Regular.ttf");
+}
 .helpOutText p {
   color: #fff;
   text-align: center;
